# netmsggen

./: CMakeLists.txt  README.md  netmsggen.files  netmsggen.includes
doc/: manual.txt
src/: CMakeLists.txt  main.cpp  main.h  member.cpp  member.h  memberarray8.cpp  memberarray8.h  memberbit.cpp  memberbit.h  memberbitset16.cpp  memberbitset16.h  memberbitset32.cpp  memberbitset32.h  memberbitset64.cpp  memberbitset64.h  memberbitset8.cpp  memberbitset8.h  memberbool.cpp  memberbool.h  memberconstint16.cpp  memberconstint16.h  memberconstint8.cpp  memberconstint8.h  memberconstuint32.cpp  memberconstuint32.h  memberctor.cpp  memberctor.h  memberdouble.cpp  memberdouble.h  memberfactory.cpp  memberfactory.h  memberfloat.cpp  memberfloat.h  memberif.cpp  memberif.h  memberimmediate.cpp  memberimmediate.h  memberint16.cpp  memberint16.h  memberint32.cpp  (+22 more)
src/templates/: Version.msg  cpp.template  hpp.template  license.template  msg.in.class.template  msg.in.impl.template  msg.in.run.template  msg.out.class.template  msg.out.impl.template
test/: ArrayTest.msg  IdentRequest.msg  IdentResult.msg  LoopTest.msg  Reee.msg  ResourceData.msg  World.msg  netmessagegen
